--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "webrtc",
+  "name": "touchplot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "go run server.go"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "bower": "^1.4.1",
-    "express": "^4.13.1"
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "brace": "^0.5.1",
+    "jquery": "^2.1.4",
+    "marked": "^0.3.5",
+    "react": "^0.13.3",
+    "webpack": "^1.12.2"
   }
 }
