--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
     "react": "^0.13.3",
-    "webpack": "^1.12.2"
+    "react-ace": "^2.5.0"
   }
 }
