--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./server"
+    "start": "go run server.go"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
     "react": "^0.13.3",
-    "react-ace": "^2.5.0"
+    "react-ace": "^2.5.0",
+    "webpack": "^1.12.2"
   }
 }
