--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "forego start"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "git@github.com:aordlab/touchplot.git"
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:aordlab/touchplot.git"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "brace": "^0.5.1",
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
+    "raw-loader": "^0.5.1",
     "react": "^0.13.3",
     "react-ace": "^2.5.0",
     "webpack": "^1.12.2"
