--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "node src/test.js",
     "start": "forego start"
+    "build": "webpack --progress --colors"
   },
   "repository": {
     "type": "git",
