--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "node src/test.js",
     "start": "forego start",
-    "postinstall": "webpack --progress --colors"
+    "postinstall": "./pypack && webpack"
   },
   "repository": {
     "type": "git",
