--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
     "raw-loader": "^0.5.1",
-    "react": "^0.13.3",
+    "react": "^0.14.3",
     "react-ace": "^2.5.0",
+    "react-dom": "^0.14.3",
     "webpack": "^1.12.2",
     "webrtc": "^1.14.1"
   }
