Automagically copy contents of sample-notebooks dir to public/forkable FORK YEAH WOOHOO

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "velocity-react": "^1.1.1",
     "webpack": "^1.12.2",
     "webrtc": "^1.14.1"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^0.3.3"
   }
 }
