--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "node src/test.js",
+    "test": "./test",
     "start": "forego start",
     "postinstall": "./pypack && webpack"
   },
