--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
     "brace": "^0.5.1",
+    "copy-webpack-plugin": "^0.3.3",
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
     "raw-loader": "^0.5.1",
