--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "./test",
     "start": "forego start",
-    "postinstall": "./pypack && webpack"
+    "postinstall": "$(npm bin)/webpack"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,5 @@
     "velocity-react": "^1.1.1",
     "webpack": "^1.12.2",
     "webrtc": "^1.14.1"
-  },
-  "devDependencies": {
-    "copy-webpack-plugin": "^0.3.3"
   }
 }
