--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "blacklist": "^1.1.2",
     "brace": "^0.5.1",
     "copy-webpack-plugin": "^0.3.3",
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
+    "medium-editor": "^5.12.0",
     "raw-loader": "^0.5.1",
     "react": "^0.14.3",
     "react-ace": "^2.5.0",
