--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-preset-stage-2": "^6.3.13",
     "blacklist": "^1.1.2",
     "brace": "^0.5.1",
     "copy-webpack-plugin": "^0.3.3",
