repo change - remove your old node_modules and re-get the repo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "touchplot",
+  "name": "livebook",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:aordlab/touchplot.git"
+    "url": "git@github.com:inkandswitch/livebook.git"
   },
   "author": "",
   "license": "ISC",
