Close menu on click outside of menu

--- a/package.json
+++ b/package.json
@@ -20,22 +20,23 @@
     "blacklist": "^1.1.2",
     "brace": "^0.5.1",
     "copy-webpack-plugin": "^0.3.3",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "jquery": "^2.1.4",
     "marked": "^0.3.5",
     "medium-editor": "^5.12.0",
+    "node-sass": "^3.4.2",
     "raw-loader": "^0.5.1",
     "react": "^0.14.3",
     "react-ace": "^2.5.0",
     "react-dom": "^0.14.3",
+    "react-onclickoutside": "^4.5.0",
     "redux": "^3.0.5",
-    "velocity-react": "^1.1.1",
-    "webpack": "^1.12.2",
-    "webrtc": "^1.14.1",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "velocity-react": "^1.1.1",
+    "webpack": "^1.12.2",
+    "webrtc": "^1.14.1"
   }
 }
