--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^0.14.3",
     "react-ace": "^2.5.0",
     "react-dom": "^0.14.3",
+    "react-helmet": "^2.3.1",
     "react-onclickoutside": "^4.5.0",
     "redux": "^3.0.5",
     "sass-loader": "^3.1.2",
