Serialize new plot information and send it to main thread
A new model for accessing plot data is being passed to the redux store.
No functions are using these new data yet, as the structure could use
some pruning.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "marked": "^0.3.5",
     "medium-editor": "^5.12.0",
     "node-sass": "^3.4.2",
+    "pypyjs": "^0.4.1",
     "raw-loader": "^0.5.1",
     "react": "^0.14.3",
     "react-ace": "^2.5.0",
